# ng

./: LICENSE  MANIFEST  autosave.c  autosave.h  basic.c  basic.h  buffer.c  buffer.h  cinfo.h  cmode.c  cmode.h  complt.c  complt.h  config.h  configure  def.h  dir.c  dir.h  dired.c  dired.h  display.c  display.h  dot.ng  echo.c  echo.h  extend.c  extend.h  extern.h  file.c  file.h  fileio.h  help.c  help.h  i_buffer.h  i_lang.h  i_line.h  i_tab.h  i_undo.h  i_window.h  in_code.h  (+60 more)
docs/: CHANGES.1_3  CHANGES.1_4  CHANGES.1_5  CHANGES.2_0  CHANGES.Ami  CHANGES.W32  Ng.FAQ  Ng.doc  Ng.ref  Ng.tut  README.Ami  README.DOS  README.H68  README.Ng  README.SKG  README.W32  fepctrl.doc  supdoc.w32  trex.doc
sys/amiga/: DMakefile  KgMenus.c  KgMenus.h  Kgremotemenus.c  Makefile  Makefile.SAS6  Makefile.gcc  Ng-Startup  alloca.asm  amiga_maps.c  clipboard.c  console.c  dirio.c  fileio.c  iconify.c  iconify.h  menumap.h  menustack.c  offset.c  sleep.c  spawn.c  sysdef.h  sysinit.c  tty.c  ttydef.h  ttyicon.c  ttyio.c  ttykbd.c  ttymenu.c  ttymouse.c  varargs.h  zz_pointer.c  zz_pointer.h
sys/bsd/: Makefile  fileio.c  spawn.c  sysdef.h  ttyio.c
sys/default/: alloca.c  canna.c  chrdef.h  cinfo.c  in_code.c  lstring.c  lstring.h  termcap.c  tty.c  ttydef.h  ttykbd.c  varargs.h  xstring.c  xstring.h
sys/epoc32/: Makefile  Makefile.postamble  Makefile.preamble  Makefile.xsdk  PB.project  epocmain.cpp  epoctty.cpp  epoctty.h  fileio.cpp  ng.mmp  spawn.c  sysdef.h  tty.c  ttyio.cpp
sys/human68k/: GNUmakefile  Makefile  dosutil.c  fasttty.c  fepctrl.c  fepctrl.h  fileio.c  h68kfncmp.c  hentrap.s  objlist  spawn.c  sysdef.h  sysinit.c  termcap  tty.c  ttyio.c
sys/msdos/: alloca.asm  alloca.nsm  dosutil.c  fasttty.c  fepctrl.c  fepctrl.h  fileio.c  linkfile  linkfile.tc  makefile  makefile.msc  makefile.tc  mk_dos_archive  ng.ini  putline.c  rawgetc.asm  rawgetc.nsm  spawn.c  sysdef.h  tty.c  ttyio.c
sys/sysv/: Makefile  fileio.c  spawn.c  sysdef.h  ttyio.c
sys/unix/: Makefile.in  acconfig.h  canna.c  config.guess  configure.in  fileio.c  spawn.c  sysconfig.h.in  sysdef.h  ttyio.c  unicode.c
sys/win32/: cefep.c  cefep.h  fileio.c  mg.ini  mg.rc  newres.h  ng.dsp  ng.dsw  ng.ini  ng.rc  ngbc.mak  resource.h  spawn.c  sysdef.h  tools.c  tools.h  tty.c  ttyctrl.cpp  ttyctrl.h  ttyio.c  winmain.c  winmain.h
